# ESP32-Pip-Boy-project

./: README.md  partitions_lvgl_example.csv  sdkconfig  sdkconfig.old
components/hardware_init/: CMakeLists.txt  aht10.c  aht10.h  encoder.c  encoder.h  hardware_init.c  hardware_init.h  max30102.c  max30102.h  music_player.c  music_player.h
components/music_screen/: CMakeLists.txt  music_screen.c  music_screen.h
components/screen_switcher/: CMakeLists.txt  screen_switcher.c  screen_switcher.h
components/sensor_display/: CMakeLists.txt  sensor_display.c  sensor_display.h
components/setting_display/: CMakeLists.txt  setting_display.c  setting_display.h
components/tetris/: CMakeLists.txt  tetris_game.c  tetris_game.h
components/time_display/: CMakeLists.txt  time_display.c  time_display.h
components/ui/: CMakeLists.txt  actions.c  actions.h  eez-flow.cpp  eez-flow.h  fonts.h  images.c  images.h  screens.c  screens.h  styles.c  styles.h  theme_pipboy.c  theme_pipboy.h  ui.c  ui.h  ui_font_share_tech_regular.c  ui_font_share_tech_regular_20.c  ui_font_share_tech_regular_40.c  ui_font_share_tech_regular_80.c
components/wifi_connect/: CMakeLists.txt  wifi_connect.c  wifi_connect.h
main/: CMakeLists.txt  main.cpp
